# unraid_api

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  VM_DOCKER_IMPLEMENTATION_PLAN.md  hacs.json  pyproject.toml
.claude/: settings.local.json
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
.github/workflows/: lint.yaml  release.yaml  test.yaml
config/: configuration.yaml
custom_components/unraid_api/: __init__.py  api.py  binary_sensor.py  button.py  config_flow.py  const.py  coordinator.py  entity.py  exceptions.py  helpers.py  icons.json  manifest.json  models.py  sensor.py  switch.py
custom_components/unraid_api/api/: __init__.py  v4_20.py  v4_26.py
custom_components/unraid_api/translations/: en.json
custom_components/unraid_hass/: __init__.py  api.py  config_flow.py  const.py  coordinator.py  icons.json  manifest.json  models.py  sensor.py
custom_components/unraid_hass/translations/: en.json
script/: develop.sh  setup.sh
scripts/: develop.sh  setup.sh
tests/: __init__.py  api_states.py  conftest.py  const.py  graphql_responses.py  test_api.py  test_api_subscription.py  test_api_versions.py  test_binary_sensor.py  test_config_flow.py  test_coordinator.py  test_device_registry.py  test_init.py  test_sensor.py  test_switch.py
