[project]
version = "1.4.0"
name = "unraid_api"
authors = [{ name = "chris-mc1" }]
description = "Unraid integration for Homeassistant"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["aiohttp", "awesomeversion"]
[project.urls]
Homepage = "https://github.com/chris-mc1/unraid_api"
Issues = "https://github.com/chris-mc1/unraid_api/issues"

[dependency-groups]
dev = [
    "colorlog",
    "homeassistant",
    "pytest-homeassistant-custom-component",
    "voluptuous-stubs",
    "ruff",
]
test = [
    "pytest",
    "pytest-asyncio",
    "pytest-aiohttp",
    "coverage",
    "pytest-cov",
]

[tool.coverage.run]
branch = true

[tool.coverage.report]
exclude_lines = ["if TYPE_CHECKING:"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
